Update to SABCS Buttons

--- a/SABCS/templateDashboard.html
+++ b/SABCS/templateDashboard.html
@@ -208,23 +208,22 @@
         <!--begin row-->
         <div style="display:flex;">
             <!-- button start -->
-            <a href="#" class="sb-button-a" style="background-color:blue;">
+            <a href="#" class="sb-button-a" style="background-color:#E9222C;">
                 <span>
-                  <span class="button-element"><img src="[[home.png]]" alt="Home" /></span>
+        <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/Registration1.png" alt="Home" /></span>
                 </span>
                 <span>
-                  <span class="button-element">HOME</span>
+        <span class="button-element">Registration</span>
                 </span>
             </a>
             <!-- button end -->
-
             <!-- button start -->
-            <a href="#" class="sb-button-a" style="background-color:green;">
+            <a href="#" class="sb-button-a" style="background-color:#FFD700;">
                 <span>
-                  <span class="button-element"><img src="[[support.png]]" alt="support" /></span>
+        <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/Hotels.png" alt="support" /></span>
                 </span>
                 <span>
-                  <span class="button-element">SUPPORT<br />LINE TWO</span>
+        <span class="button-element">Hotels<br />LINE TWO</span>
                 </span>
             </a>
             <!-- button end -->
@@ -233,143 +232,138 @@
         <!--begin row-->
         <div style="display:flex;">
             <!-- button start -->
-            <a href="#" class="sb-button-a" style="background-color:red;">
+            <a href="#" class="sb-button-a" style="background-color:#021A98;">
                 <span>
-                  <span class="button-element"><img src="[[info.png]]" alt="info" /></span>
+        <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/Call_For_Abstracts.png" alt="info" /></span>
                 </span>
                 <span>
-                  <span class="button-element">INFO<br />LINE TWO<br /> LINE THREE</span>
+        <span class="button-element">Call for Abstracts</span>
                 </span>
             </a>
             <!-- button end -->
-
             <!-- button start -->
-            <a href="#" class="sb-button-a" style="background-color:orange;">
+            <a href="#" class="sb-button-a" style="background-color:#00A166">
                 <span>
-                  <span class="button-element"><img src="[[mail.png]]" alt="contact" /></span>
+        <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/2017_Overview.png" alt="contact" /></span>
                 </span>
                 <span>
-                  <span class="button-element">CONTACT<br />LINE TWO</span>
+        <span class="button-element">2020 Overview</span>
+                </span>
+            </a>
+            <!-- button end -->
+        </div>
+        <!--end row-->
+        <!--begin row-->
+        <div style="display:flex;">
+            <!-- button start -->
+            <a href="#" class="sb-button-a" style="background-color:#FF8C00;">
+                <span>
+              <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/Program1.png" alt="Home" /></span>
+                </span>
+                <span>
+              <span class="button-element">Program</span>
+                </span>
+            </a>
+            <!-- button end -->
+            <!-- button start -->
+            <a href="#" class="sb-button-a" style="background-color:#F2528D;">
+                <span>
+              <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/Patient_Advocates.png" alt="support" /></span>
+                </span>
+                <span>
+              <span class="button-element">Patient Advocates</span>
+                </span>
+            </a>
+            <!-- button end -->
+        </div>
+        <!--end row-->
+        <!--begin row-->
+        <div style="display:flex;">
+            <!-- button start -->
+            <a href="#" class="sb-button-a" style="background-color:#81919E;">
+                <span>
+              <span class="button-element"><img src="https://static.coreapps.net/sabcs2018/resources/cf86bb36-ea0c-4c6a-85b6-888455778d25.png" alt="info" /></span>
+                </span>
+                <span>
+              <span class="button-element">Support and Exhibits</span>
+                </span>
+            </a>
+            <!-- button end -->
+            <!-- button start -->
+            <a href="#" class="sb-button-a" style="background-color:#671E9B;">
+                <span>
+              <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/Travel.png" alt="contact" /></span>
+                </span>
+                <span>
+              <span class="button-element">Travel</span>
+                </span>
+            </a>
+            <!-- button end -->
+        </div>
+        <!--end row-->
+        <!--begin row-->
+        <div style="display:flex;">
+            <!-- button start -->
+            <a href="#" class="sb-button-a" style="background-color:#8FC500;">
+                <span>
+              <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/Media.png" alt="Home" /></span>
+                </span>
+                <span>
+              <span class="button-element">Media</span>
+                </span>
+            </a>
+            <!-- button end -->
+            <!-- button start -->
+            <a href="#" class="sb-button-a" style="background-color:#7466D2;">
+                <span>
+              <span class="button-element"><img src="https://static.coreapps.net/sabcs2018/resources/44f51c5e-8a57-4cd1-b2c2-570224b1f3f1.png" alt="support" /></span>
+                </span>
+                <span>
+              <span class="button-element">Satellite Symposia</span>
+                </span>
+            </a>
+            <!-- button end -->
+        </div>
+        <!--end row-->
+        <!--begin row-->
+        <div style="display:flex;">
+            <!-- button start -->
+            <a href="#" class="sb-button-a" style="background-color:#805927;">
+                <span>
+              <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/FAQs.png" alt="info" /></span>
+                </span>
+                <span>
+              <span class="button-element">FAQs</span>
+                </span>
+            </a>
+            <!-- button end -->
+            <!-- button start -->
+            <a href="#" class="sb-button-a" style="background-color:rgba(255,255,255,1);">
+                <span>
+              <span class="button-element"><img src="https://static.coreapps.net/sabcs2020/html/buttons_5_mail.png" alt="contact" /></span>
+                </span>
+                <span>
+              <span class="button-element">Unknown</span>
                 </span>
             </a>
             <!-- button end -->
         </div>
         <!--end row-->
         <!--start bottom bar-->
-        <div class="bottom-bar">
+        <!-- <div class="bottom-bar">
             <div class="bottom-bar-left">
-                <a href="#"><img src="[[info.png]]" alt="icon" style="height:1.4rem;" /></a>
+                <a href="#"><img src="https://static.coreapps.net/sabcs2020/html/buttons_3_info.png" alt="icon" style="height:1.4rem;" /></a>
             </div>
             <div class="bottom-bar-center"><a href="#">center link</a></div>
             <div class="bottom-bar-right">
-                <a href="#"><img src="[[support.png]]" alt="icon" style="height:1.4rem;" /></a>
-            </div>
-        </div>
-        <!--end bottom bar-->
+                <a href="#"><img src="https://static.coreapps.net/sabcs2020/html/buttons_7_support.png" alt="icon" style="height:1.4rem;" /></a>
+            </div> -->
+    </div>
+    <!--end bottom bar-->
 
-        <p> </p>
-        <p> </p>
-        <p> </p>
-
-        <!--begin row 3 columns-->
-        <div style="display:flex;">
-            <!-- button start -->
-            <a href="#" class="sb-button-a" style="background-color:green;">
-                <span>
-                  <span class="button-element"><img src="[[home.png]]" alt="home" /></span>
-                </span>
-                <span>
-                  <span class="button-element">HOME</span>
-                </span>
-            </a>
-            <!-- button end -->
-
-            <!-- button start -->
-            <a href="#" class="sb-button-a" style="background-color:blue;">
-                <span>
-                  <span class="button-element"><img src="[[support.png]]" alt="support" /></span>
-                </span>
-                <span>
-                  <span class="button-element">SUPPORT<br />LINE TWO</span>
-                </span>
-            </a>
-            <!-- button end -->
-
-            <!-- button start -->
-            <a href="#" class="sb-button-a" style="background-color:orange;">
-                <span>
-                  <span class="button-element"><img src="[[info.png]]" alt="info" /></span>
-                </span>
-                <span>
-                  <span class="button-element">INFO<br />LINE TWO</span>
-                </span>
-            </a>
-            <!-- button end -->
-        </div>
-        <!--end row-->
-
-        <p> </p>
-        <p> </p>
-        <p> </p>
-
-        <!--begin row 2 columns fixed height-->
-        <div style="display:flex; height:200px;">
-            <!-- button start -->
-            <a href="#" class="sb-button-a" style="background-color:green;">
-                <span>
-                  <span class="button-element"><img src="[[home.png]]" alt="home" /></span>
-                </span>
-                <span>
-                  <span class="button-element">HOME</span>
-                </span>
-            </a>
-            <!-- button end -->
-
-            <!-- button start -->
-            <a href="#" class="sb-button-a" style="background-color:blue;">
-                <span>
-                  <span class="button-element"><img src="[[support.png]]" alt="support" /></span>
-                </span>
-                <span>
-                  <span class="button-element">SUPPORT<br />LINE TWO</span>
-                </span>
-            </a>
-            <!-- button end -->
-        </div>
-        <!--end row-->
-        <p></p>
-        <p></p>
-
-        <div class="sb-row" style="margin-top:48px;">
-
-            <div class="sb-third-column">
-                <!-- button start -->
-                <a href="#" class="sb-button-b" style="background-color:green;">
-                    <img src="[[home.png]]" alt="Home" /><br /> HOME
-                </a>
-                <!-- button end -->
-            </div>
-            <div class="sb-third-column">
-                <!-- button start -->
-                <a href="#" class="sb-button-c" style="background-color:orange;">
-                    <img src="[[info.png]]" alt="Info" /> INFO
-                </a>
-                <!-- button end -->
-            </div>
-            <div class="sb-third-column">
-                <!-- button start -->
-                <a href="#" class="sb-button-c" style="background-color:red;">
-                    <img src="[[support.png]]" alt="Support" /> SUPPORT
-                </a>
-                <!-- button end -->
-            </div>
-
-        </div>
-        <!--row-->
-
-        <p> </p>
-        <p> </p>
-        <p> </p>
+    <p> </p>
+    <p> </p>
+    <p> </p>
     </div>
 </body>
 
