--- a/SABCS/templateDashboard.html
+++ b/SABCS/templateDashboard.html
@@ -210,7 +210,7 @@
             <!-- button start -->
             <a href="#" class="sb-button-a" style="background-color:#E9222C;">
                 <span>
-        <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/Registration1.png" alt="Home" /></span>
+        <span class="button-element"><img src="https://static.coreapps.net/sabcs2017/icons/Registration1.png" alt="Home" /></span>
                 </span>
                 <span>
         <span class="button-element">Registration</span>
@@ -220,7 +220,7 @@
             <!-- button start -->
             <a href="#" class="sb-button-a" style="background-color:#FFD700;">
                 <span>
-        <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/Hotels.png" alt="support" /></span>
+        <span class="button-element"><img src="https://static.coreapps.net/sabcs2017/icons/Hotels.png" alt="support" /></span>
                 </span>
                 <span>
         <span class="button-element">Hotels<br />LINE TWO</span>
@@ -234,7 +234,7 @@
             <!-- button start -->
             <a href="#" class="sb-button-a" style="background-color:#021A98;">
                 <span>
-        <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/Call_For_Abstracts.png" alt="info" /></span>
+        <span class="button-element"><img src="https://static.coreapps.net/sabcs2017/icons/Call_For_Abstracts.png" alt="info" /></span>
                 </span>
                 <span>
         <span class="button-element">Call for Abstracts</span>
@@ -244,7 +244,7 @@
             <!-- button start -->
             <a href="#" class="sb-button-a" style="background-color:#00A166">
                 <span>
-        <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/2017_Overview.png" alt="contact" /></span>
+        <span class="button-element"><img src="https://static.coreapps.net/sabcs2017/icons/2017_Overview.png" alt="contact" /></span>
                 </span>
                 <span>
         <span class="button-element">2020 Overview</span>
@@ -258,7 +258,7 @@
             <!-- button start -->
             <a href="#" class="sb-button-a" style="background-color:#FF8C00;">
                 <span>
-              <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/Program1.png" alt="Home" /></span>
+              <span class="button-element"><img src="https://static.coreapps.net/sabcs2017/icons/Program1.png" alt="Home" /></span>
                 </span>
                 <span>
               <span class="button-element">Program</span>
@@ -268,7 +268,7 @@
             <!-- button start -->
             <a href="#" class="sb-button-a" style="background-color:#F2528D;">
                 <span>
-              <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/Patient_Advocates.png" alt="support" /></span>
+              <span class="button-element"><img src="https://static.coreapps.net/sabcs2017/icons/Patient_Advocates.png" alt="support" /></span>
                 </span>
                 <span>
               <span class="button-element">Patient Advocates</span>
@@ -292,7 +292,7 @@
             <!-- button start -->
             <a href="#" class="sb-button-a" style="background-color:#671E9B;">
                 <span>
-              <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/Travel.png" alt="contact" /></span>
+              <span class="button-element"><img src="https://static.coreapps.net/sabcs2017/icons/Travel.png" alt="contact" /></span>
                 </span>
                 <span>
               <span class="button-element">Travel</span>
@@ -306,7 +306,7 @@
             <!-- button start -->
             <a href="#" class="sb-button-a" style="background-color:#8FC500;">
                 <span>
-              <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/Media.png" alt="Home" /></span>
+              <span class="button-element"><img src="https://static.coreapps.net/sabcs2017/icons/Media.png" alt="Home" /></span>
                 </span>
                 <span>
               <span class="button-element">Media</span>
@@ -330,7 +330,7 @@
             <!-- button start -->
             <a href="#" class="sb-button-a" style="background-color:#805927;">
                 <span>
-              <span class="button-element"><img src="http://static.coreapps.net/sabcs2017/icons/FAQs.png" alt="info" /></span>
+              <span class="button-element"><img src="https://static.coreapps.net/sabcs2017/icons/FAQs.png" alt="info" /></span>
                 </span>
                 <span>
               <span class="button-element">FAQs</span>
@@ -350,20 +350,16 @@
         </div>
         <!--end row-->
         <!--start bottom bar-->
-        <!-- <div class="bottom-bar">
+        <div class="bottom-bar">
             <div class="bottom-bar-left">
                 <a href="#"><img src="https://static.coreapps.net/sabcs2020/html/buttons_3_info.png" alt="icon" style="height:1.4rem;" /></a>
             </div>
-            <div class="bottom-bar-center"><a href="#">center link</a></div>
+            <div class="bottom-bar-center"><a href="#">About SABCS 2020</a></div>
             <div class="bottom-bar-right">
                 <a href="#"><img src="https://static.coreapps.net/sabcs2020/html/buttons_7_support.png" alt="icon" style="height:1.4rem;" /></a>
-            </div> -->
-    </div>
-    <!--end bottom bar-->
-
-    <p> </p>
-    <p> </p>
-    <p> </p>
+            </div>
+        </div>
+        <!--end bottom bar-->
     </div>
 </body>
 
